--- a/examples/compose/docker-compose.yml
+++ b/examples/compose/docker-compose.yml
@@ -79,6 +79,10 @@ services:
       REGISTRY_AUTH_TOKEN_ISSUER: ${MACHINE_FQDN}
       REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE: /secrets/portus.crt
 
+      REGISTRY_HTTP_SECRET: ${SECRET_KEY_BASE}
+      REGISTRY_STORAGE_DELETE_ENABLED: "true"
+      #REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY: /registry_data
+      
       # SSL
       REGISTRY_HTTP_TLS_CERTIFICATE: /secrets/portus.crt
       REGISTRY_HTTP_TLS_KEY: /secrets/portus.key
