--- a/examples/compose/nginx/nginx.conf
+++ b/examples/compose/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name pdr-01;
+    server_name ldap-nfs-01;
     root /srv/Portus/public;
 
     ##
